--- a/functions/package.json
+++ b/functions/package.json
@@ -10,12 +10,14 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "8"
+    "node": "10"
   },
   "dependencies": {
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.3.0",
-    "osmosis": "^1.1.10"
+    "osmosis": "^1.1.10",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
