Fix bug with the gethering List of SET

--- a/firebase.json
+++ b/firebase.json
@@ -16,6 +16,10 @@
       {
         "source": "/calc/**",
         "function": "svc"
+      },
+	  {
+        "source": "/list/**",
+        "function": "svc"
       }
     ]
   }
